--- a/source/index.html
+++ b/source/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-
+  <p>Как ваши дела?</p>
+  <p>What are you doing now?</p>
 </body>
 </html>
