Сверстал кнопку регистрации

--- a/source/index.html
+++ b/source/index.html
@@ -8,7 +8,8 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <p>Как ваши дела?</p>
-  <p>What are you doing now?</p>
+  <div class="button-wrapper">
+    <button class="button button-reg" type="button">Регистрация</button>
+  </div>
 </body>
 </html>
