--- a/source/index.html
+++ b/source/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="button-wrapper">
-    <button class="button button-reg" type="button">Регистрация</button>
+    <button class="button button-reg" type="button" disabled>Зарегистрироваться</button>
   </div>
 </body>
 </html>
